#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([paraver-toolset], [0.2], [paraver@bsc.es])
AC_CONFIG_SRCDIR([stats/src/stats.h])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([-Wall])

# Checks for programs.
AC_PROG_CC(gcc xlc cc)
AC_PROG_CXX(g++ xlC CC)
AC_PROG_CPP
AC_PROG_CXXCPP

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([strchr strdup strrchr strstr])

AC_CONFIG_FILES([Makefile prvmerger/Makefile sort/Makefile stats/Makefile event_translator/Makefile]) 
AC_OUTPUT
