                    
include_HEADERS = \
                  event_description.h\
                  event_encoding.h\
                  event_list.h\
                  events.h\
                  MPI_EventEncoding.h\
                  papi_events.h\
                  ptools_prv_types.h\
                  ../ptools_config.h\
                  ptools_types.h

# Erases everything which should not be uploaded to CVS
mrproper: distclean
	rm -fr Makefile.in
